--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Kawaguchi Yurina 川口ゆりな 카와구치유리나 川口 百合凪" />
 		<meta property="og:site_name" content="Kawaguchi Yurina" />
 		<meta property="og:description" content="Latest news about Kawaguchi Yurina" />
-		<meta property="og:url" content="https://kumiyeonssi.github.io/" />
+		<meta property="og:url" content="https://kawaguchi-yurina-fansite.herokuapp.com/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="assets/img/opengraph.jpg" />
 		<meta property="og:image:alt" content="Kawaguchi Yurina Fancy Girls Planet 999" />
@@ -22,7 +22,7 @@
 		<meta name="twitter:title" content="Kawaguchi Yurina 川口ゆりな 카와구치유리나 川口 百合凪" />
 		<meta property="twitter:description" content="Latest news about Kawaguchi Yurina" />
 		<meta property="twitter:image" content="assets/img/opengraph.jpg" />
-		<meta name="twitter:player" content="https://kumiyeonssi.github.io/" />
+		<meta name="twitter:player" content="https://kawaguchi-yurina-fansite.herokuapp.com/" />
 		<meta name="twitter:player:width" content="480" />
 		<meta name="twitter:player:height" content="480" />
 
